[package]
name = "wx_pay"
version = "0.1.1"
edition = "2021"
authors = ["zomem"]
description = "微信支付 api"
license = "MIT"
readme = "README.md"
include = ["/src"]

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
bcrypt = "0.13"
rsa = "0.6"
rust-crypto = "0.2"
base64 = "0.13"
aes-gcm = "0.10"
hex = "0.4"