[package]
name = "wx_pay"
version = "0.2.2"
edition = "2021"
authors = ["zomem"]
description = "微信支付 api"
license = "MIT"
readme = "README.md"
include = ["/src"]

[dependencies]
chrono = "0.4.38"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1.40.0", features = ["full"] }
rand = "0.8.5"
rsa = { version = "0.9.6", features = ["sha2"] }
base64 = "0.22.1"
aes-gcm = "0.10.3"
hex = "0.4.3"
anyhow = "1.0.87"
pkcs8 = "0.10.2"
uuid = { version = "1.10.0", features = ["v4"] }
serde_with = "3.9.0"
