[package]
name = "wx_pay"
version = "0.3.3"
edition = "2021"
authors = ["zomem"]
description = "微信支付 api"
license = "MIT"
readme = "README.md"
include = ["/src"]

[dependencies]
chrono = "0.4.41"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1.47.1", features = ["full"] }
rand = "0.9.2"
rsa = { version = "0.9.8", features = ["sha2"] }
base64 = "0.22.1"
aes-gcm = "0.10.3"
hex = "0.4.3"
anyhow = "1.0.99"
pkcs8 = "0.10.2"
uuid = { version = "1.18.0", features = ["v4"] }
serde_with = "3.14.0"
